--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "orientation": "portrait",
     "related_applications": [],
     "prefer_related_applications": false,
-    "url": "https://f1sk.github.io/dkid_mads/.",
+    "url": "https://f1sk.github.io/dkid_mads",
     "icons": [
         {
             "src": "https://f1sk.github.io/dkid/assets/ic_launcher_foreground.png",
